<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.ayst.adplayer.settings.PlayByHttpSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.ayst.adplayer.view.XianHeiFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_play_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big_big" />

        <com.ayst.adplayer.view.XianHeiFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/http_play_setting_intro"
            android:textColor="@color/white_70"
            android:textSize="@dimen/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/white_30" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/playlist_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    style="@style/Button"
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/add" />

                <com.andexert.expandablelayout.library.ExpandableLayoutListView xmlns:expandable="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/lv_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/playlist"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        style="@style/Button"
                        android:id="@+id/btn_edit_add"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/add" />

                    <Button
                        style="@style/Button.Red"
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_marginStart="40dp"
                        android:layout_weight="1"
                        android:text="@string/cancel"/>

                    <Button
                        style="@style/Button"
                        android:id="@+id/btn_save"
                        android:layout_width="0dp"
                        android:layout_marginStart="40dp"
                        android:layout_weight="1"
                        android:text="@string/save" />
                </LinearLayout>

                <ListView
                    android:id="@+id/lv_edit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:minHeight="100dp" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
