<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.ayst.adplayer.settings.CopySettingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.ayst.adplayer.view.XianHeiFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big_big" />

        <com.ayst.adplayer.view.XianHeiFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_setting_intro"
            android:textColor="@color/white_70"
            android:textSize="@dimen/font_normal"
            android:layout_marginTop="40dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/white_30"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.ayst.adplayer.view.XianHeiFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textColor="@color/white"
                android:textSize="@dimen/font_normal"/>

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/btn_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_common_selector"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
